crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__multiple_files_file1_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content1
---
# jarl-ignore any_is_na: <reason>
any(is.na(x))
