crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__multiple_files_file2_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content2
---
# jarl-ignore any_duplicated: <reason>
any(duplicated(y))
