crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__multiple_violations_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
# jarl-ignore any_is_na: <reason>
any(is.na(x))
# jarl-ignore any_duplicated: <reason>
any(duplicated(y))
