crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__multiple_violations_output.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Modified: Added 2 suppression comment(s) to test.R

Summary: Added 2 suppression comment(s) across 1 file(s).

----- stderr -----

----- args -----
check . --add-jarl-ignore
