crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__nested_violation_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
# jarl-ignore any_is_na: <reason>
x <- foo(any(is.na(y)))
