crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__no_violations_output.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: output
---

success: true
exit_code: 0
----- stdout -----
Info: No violations found, no suppression comments added.

----- stderr -----

----- args -----
check . --add-jarl-ignore
