crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__pipe_chain_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
x |>
  foo() |>
  # jarl-ignore download_file: <reason>
  download.file(mode = "w") |>
  bar()
