crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__reason_with_newlines_file_content.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: content
---
# jarl-ignore any_is_na: line1 line2 line3
any(is.na(x))
