crates/jarl/tests/integration/snapshots/integration__add_jarl_ignore__reason_with_newlines_output.snap
---
source: crates/jarl/tests/integration/add_jarl_ignore.rs
expression: output
---

success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: --add-jarl-ignore=<reason> cannot contain newline characters.

----- args -----
check . --add-jarl-ignore=line1
line2
line3
